<resources>
    <!-- Name of the App -->
    <string name="app_name">MC Route</string>

    <!-- Map Activity -->
    <string name="marker_title">Your Position</string>
    <string name="marker_snippet">You are here</string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="save">Save</string>

    <!-- Home Activity -->
    <string name="welcome">Welcome</string>
    <string name="created_by">Created by Group04</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <!-- Language -->
    <string name="preference_language_title">Your System-Language is:</string>
    <string name="preference_language_key" translatable="false">language</string>
    <string name="preference_language_summary">English</string>
    <!-- Audio Settings -->
    <string name="preference_audio_title">Sound</string>
    <string name="preference_audio_key" translatable="false">audio</string>
    <string name="preference_audio_onSummary">Sound enabled</string>
    <string name="preference_audio_offSummary">Sound disabled</string>
    <!-- GPS Ping -->
    <string name="preference_ping_title" translatable="false">GPS Ping in ms</string>
    <string name="preference_ping_key" translatable="false">ping</string>
    <string name="preference_ping_default" translatable="false">1000</string>
    <!-- Styles -->
    <string name="preference_style_title" translatable="false">Map Style</string>
    <string name="preference_style_key" translatable="false">style</string>
    <string name="preference_style_default" translatable="false">Streets</string>
    <string-array name="style_entries">
        <item>Streets</item>
        <item>Satellite</item>
        <item>Dark</item>
        <item>Light</item>
        <item>Outdoor</item>
    </string-array>
    <string-array name="style_values">
        <item>Streets</item>
        <item>Satellite</item>
        <item>Dark</item>
        <item>Light</item>
        <item>Outdoor</item>
    </string-array>
    <!-- Route Color -->
    <string name="preference_route_color_title">Route Color</string>
    <string name="preference_route_color_key" translatable="false">routecolor</string>
    <string name="preference_route_color_default" translatable="false">cyan</string>
    <string-array name="route_color_entries">
        <item>black</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>magenta</item>
        <item>cyan</item>
        <item>white</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>silver</item>
    </string-array>
    <string-array name="route_color_values">
        <item>black</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>magenta</item>
        <item>cyan</item>
        <item>white</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>silver</item>
    </string-array>
    <!-- Polygon Color -->
    <string name="preference_polygon_color_title">Polygon Color</string>
    <string name="preference_polygon_color_key" translatable="false">polygoncolor</string>
    <string name="preference_polygon_color_default" translatable="false">cyan</string>
    <string-array name="polygon_color_entries">
        <item>black</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>magenta</item>
        <item>cyan</item>
        <item>white</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>silver</item>
    </string-array>
    <string-array name="polygon_color_values">
        <item>black</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>magenta</item>
        <item>cyan</item>
        <item>white</item>
        <item>grey</item>
        <item>lightgrey</item>
        <item>silver</item>
    </string-array>

    <!-- Statistics Activity -->
    <string name="statistics">STATISTICS</string>
    <string name="no_stat_data">No Data found to display.</string>>

    <!-- Information Activity -->
    <string name="informationtext">Welcome to MC ROUTE.\n The "MC ROUTE"-App is a
        programming-project which was born in cause of the Mobile Computing internship of the
        University of Mainz. \n\n We hope you enjoy our Application and are trying to find the
        special Animations. \n\n ENJOY!</string>
    <string name="creators_text">Created by:
        \n\n Rebecca \n Lisa-Patricia \n Peter \n Jan\n Damian </string>

    <!-- Data Activity -->
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="no_data">No Data found</string>
    <string name="stored_data">My stored Routes and Polygons</string>
    <string name="context_menu_header">Select the action</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_rename">Rename</string>

    <!-- Dialog Alert -->
    <string name="name">Name</string>
    <string name="new_name">Enter new name here</string>
    <string name="back">Back</string>
    <string name="savings">Savings</string>
    <string name="rename_data">Rename my Dataset</string>

</resources>
