<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/preference_language_title"
        android:key="@string/preference_language_key"
        android:defaultValue="@string/preference_language_default"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"/>

    <ListPreference
        android:title="@string/preference_style_title"
        android:key="@string/preference_style_key"
        android:defaultValue="@string/preference_style_default"
        android:entries="@array/style_entries"
        android:entryValues="@array/style_values"/>

    <EditTextPreference
        android:title="@string/preference_ping_title"
        android:key="@string/preference_ping_key"
        android:defaultValue="@string/preference_ping_default"
        android:inputType="numberDecimal" />

</PreferenceScreen>