<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nntV"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:hint="@string/new_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="125dp"
        android:layout_height="59dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/nntV"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="85dp" />

    <TextView
        android:id="@+id/renametext"
        android:layout_width="194dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/rename_data"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nntV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.54" />

</android.support.constraint.ConstraintLayout>
